[package]
name = "efi-loadopt"
version = "0.2.0"
authors = ["MOZGIII <mike-n@narod.ru>"]
edition = "2021"

description = "UEFI load option (EFI_LOAD_OPTION) decoding"
documentation = "https://docs.rs/efi-loadopt"
repository = "https://github.com/MOZGIII/efi-loadopt.git"
keywords = ["uefi", "efi"]
license = "MIT"

[dependencies]
byteorder = "1.3"
thiserror = "1"
